feat: 补充demo示例代码, 新增对ERC20, ERC721合约事件的处理demo